--- a/app/views/mainVote.scala.html
+++ b/app/views/mainVote.scala.html
@@ -6,6 +6,8 @@
     <head>
         <title>@title</title>
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/vote.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/resetPopUp.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/popUp.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
         <script src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")" type="text/javascript"></script>
