--- a/app/views/vote.scala.html
+++ b/app/views/vote.scala.html
@@ -12,8 +12,8 @@
         <h1>@message</h1>
     </div>
 
-    <form id="score" role="form" action = "/voting" method = post>
-        <div class="creativity">
+    <form id="score" class="text-center" role="form" action = "/voting" method = post>
+        <div class="creativity .col-md-9 .col-md-push-3">
             <label for="sel1">Creativity</label>
             <span class="rating">
                 <input type="radio" class="rating-input"
@@ -109,4 +109,20 @@
     </div>
 
 
+    <!-- pop up -->
+
+    <a href="#0" class="cd-popup-trigger">View Pop-up</a>
+
+    <div class="cd-popup" role="alert">
+        <div class="cd-popup-container">
+            <p>Are you sure you want to delete this element?</p>
+            <ul class="cd-buttons">
+                <li><a href="#0">Yes</a></li>
+                <li><a href="#0">No</a></li>
+            </ul>
+            <a href="#0" class="cd-popup-close img-replace">Close</a>
+        </div> <!-- cd-popup-container -->
+    </div> <!-- cd-popup -->
+
+    <!-- <script src="js/confirmPopUp.js"></script> <!-- Resource jQuery -->
 }
