--- a/public/stylesheets/vote.css
+++ b/public/stylesheets/vote.css
@@ -1,4 +1,6 @@
-
+body{
+    background-color: #555;
+}
 .commentBox {
     height: 40%;
     width: 30%;
@@ -76,3 +78,4 @@
     color: #666;
     border-bottom-color: #666;
 }
+
