--- a/app/views/login.scala.html
+++ b/app/views/login.scala.html
@@ -1,5 +1,9 @@
 @main("Login") {
-
+    <style>
+        .regisbut{
+            margin: 20px 20px 20px 20px;
+        }
+    </style>
     <div class = "Head">
         <div class="row">
             <div class="col-md-12"><h1>LOGIN EXCEED VOTE</h1></div>
@@ -17,5 +21,9 @@
         </div>
         <button id="submit" type="submit" class="btn btn-primary btn-block center-block">Submit</button>
     </form>
+    <div class = "regisbut">
+        <a href="/registor"> <button id="regis" type="regis" class="btn btn-primary btn-block center-block">Register</button></a>
+    </div>
+
 
 }
