Added vote score changing system

--- a/app/views/vote.scala.html
+++ b/app/views/vote.scala.html
@@ -13,7 +13,7 @@
     </div>
 
     <form id="score" class="text-center" role="form" action = "/voting" method = post>
-        <div class="creativity .col-md-9 .col-md-push-3">
+        <div class="creativity">
             <label for="sel1">Creativity</label>
             <span class="rating">
                 <input type="radio" class="rating-input"
@@ -125,4 +125,5 @@
     </div> <!-- cd-popup -->
 
     <!-- <script src="js/confirmPopUp.js"></script> <!-- Resource jQuery -->
+
 }
