Regis can save new data to database

--- a/app/views/login.scala.html
+++ b/app/views/login.scala.html
@@ -1,3 +1,4 @@
+
 @main("Login") {
     <style>
         .regisbut{
@@ -10,7 +11,7 @@
 
         </div>
     </div>
-    <form action = "/log" method = post>
+    <form action = "/log" method = POST>
         <div class="form-group">
             <label for="exampleInputEmail1">Username</label>
             <input  class="form-control" id="email" name="email" placeholder="Enter Username" >
