--- a/app/views/Register.scala.html
+++ b/app/views/Register.scala.html
@@ -9,11 +9,11 @@
     <form action = "/regis" method = post>
         <div class="form-group">
             <label for="Username">Username</label>
-            <input  class="form-control" id="Username" name="Username" placeholder="Enter Username" >
+            <input  class="form-control" id="Username" name="username" placeholder="Enter Username" >
         </div>
         <div class="form-group">
             <label for="Password1">Password</label>
-            <input type="Password" class="form-control" id="Password" name="Password" placeholder="Password">
+            <input type="Password" class="form-control" id="Password" name="password" placeholder="Password">
         </div>
         @*gity *@
         <button id="submit" type="submit" class="btn btn-primary btn-block center-block">Submit</button>
