--- a/app/views/login.scala.html
+++ b/app/views/login.scala.html
@@ -1,27 +1,48 @@
+@(form: Form[Login])
 
 @main("Login") {
-    <style>
-        .regisbut{
-            margin: 20px 20px 20px 20px;
-        }
-    </style>
+
     <div class = "Head">
         <div class="row">
             <div class="col-md-12"><h1>LOGIN EXCEED VOTE</h1></div>
 
         </div>
     </div>
-    <form action = "/log" method = POST>
+
+    <form class="form-horizontal" action = "/log" method = POST>
+        @if(form.hasGlobalErrors) {
+            <p class="error">
+            @form.globalError.message
+            </p>
+        }
         <div class="form-group">
-            <label for="exampleInputEmail1">Username</label>
-            <input  class="form-control" id="email" name="email" placeholder="Enter Username" >
+            <label for="username" class="col-sm-2 control-label">username</label>
+            <div class="col-sm-10">
+                <input type="Username" class="form-control" id="Username" name="username"  placeholder="Enter Username">
+            </div>
         </div>
         <div class="form-group">
-            <label for="exampleInputPassword1">Password</label>
-            <input type="password" class="form-control" id="password" name="password" placeholder="Password">
+            <label for="password" class="col-sm-2 control-label">Password</label>
+            <div class="col-sm-10">
+                <input type="Password" class="form-control" id="Password" name="password" placeholder="Password">
+            </div>
         </div>
-        <button id="submit" type="submit" class="btn btn-primary btn-block center-block">Submit</button>
+        <div class="form-group">
+            <div class="col-sm-offset-2 col-sm-10">
+                <div class="checkbox">
+                    <label>
+                        <input type="checkbox"> Remember me
+                    </label>
+                </div>
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="col-sm-offset-2 col-sm-10">
+                <button type="submit" class="btn btn-default">Sign in</button>
+            </div>
+        </div>
     </form>
+
     <div class = "regisbut">
         <a href="/registor"> <button id="regis" type="regis" class="btn btn-primary btn-block center-block">Register</button></a>
     </div>
