--- a/app/views/vote.scala.html
+++ b/app/views/vote.scala.html
@@ -10,6 +10,8 @@
 
     <div id="header">
         <h1>@message</h1>
+
+        <a href = "/logout"><button type="button" class="btn btn-danger">Logout</button></a>
     </div>
 
     <form id="score" class="text-center" role="form" action = "/voting" method = post>
