--- a/app/views/complete.scala.html
+++ b/app/views/complete.scala.html
@@ -10,6 +10,6 @@
         }
     </div>
     <div id="browse_app" class="text-center">
-        <a class="btn btn-large btn-info" href="/">Browse to index page (Test)</a>
+        <a class="btn btn-large btn-info" href="/index">Browse to index page (Test)</a>
     </div>
 }
