--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -10,6 +10,8 @@
 
     <div id="header">
         <h1>@message</h1>
+
+        <a href = "/logout"><button type="button" class="btn btn-danger">Logout</button></a>
     </div>
 
 
@@ -28,20 +30,6 @@
     </div>
 
     <br>
-
-
-        <div class="detailBox">
-            <div class="titleBox">
-                <label>Comment Box</label>
-            </div>
-            <div class="commentBox">
-                <form class="form-inline" role="form">
-                    <div class="form-group">
-                        <input class="form-control" type="text" placeholder="Your comments"/>
-                    </div>
-                </form>
-            </div>
-        </div>
 
     <div id="browse_app" class="text-center">
         <a class="btn btn-large btn-info" href="/result">Browse to result page (Test)</a>
