--- a/app/views/vote.scala.html
+++ b/app/views/vote.scala.html
@@ -14,7 +14,7 @@
         <a href = "/logout"><button type="button" class="btn btn-danger">Logout</button></a>
     </div>
 
-    <form id="score" class="text-center" role="form" action = "/voting" method = post>
+    <form id="score" class="text-center" role="form" action = "/voting" method = post onsubmit="return confirm('Do you want to submit the form?');">
         <div class="creativity">
             <label for="sel1">Creativity</label>
             <span class="rating">
@@ -99,7 +99,7 @@
             </div>
         </div>
 
-        <button id="submit" type="submit" class="btn btn-primary btn-block center-block">Submit</button>
+        <button id="submit" type="submit" class="btn btn-primary btn-block center-block"> Submit </button>
     </form>
     <div id="browse_app" class="text-center">
         <a class="btn btn-large btn-info" href="/result">Browse to result page (Test)</a>
@@ -110,22 +110,6 @@
         <a class="btn btn-large btn-info" href="/">Browse to index page (Test)</a>
     </div>
 
-
-    <!-- pop up -->
-
-    <a href="#0" class="cd-popup-trigger">View Pop-up</a>
-
-    <div class="cd-popup" role="alert">
-        <div class="cd-popup-container">
-            <p>Are you sure you want to delete this element?</p>
-            <ul class="cd-buttons">
-                <li><a href="#0">Yes</a></li>
-                <li><a href="#0">No</a></li>
-            </ul>
-            <a href="#0" class="cd-popup-close img-replace">Close</a>
-        </div> <!-- cd-popup-container -->
-    </div> <!-- cd-popup -->
-
-    <!-- <script src="js/confirmPopUp.js"></script> <!-- Resource jQuery -->
+    
 
 }
