--- a/app/views/login.scala.html
+++ b/app/views/login.scala.html
@@ -1,51 +1,35 @@
 @(form: Form[Login])
 
-@main("Login") {
+@mainLogin("Login") {
 
-    <div class = "Head">
-        <div class="row">
-            <div class="col-md-12"><h1>LOGIN EXCEED VOTE</h1></div>
+    <div class="login-form">
 
+        <h1>Login</h1>
+
+        <form class="form-horizontal" action = "/log" method = POST>
+            @if(form.hasGlobalErrors) {
+                <p class="error">
+                @form.globalError.message
+                </p>
+            }
+
+            <input type="text" class="form-control" placeholder="Username " id="Username" name="username">
+            <i class="fa fa-user"></i>
+
+            <div class="form-group log-status">
+            <input type="password" class="form-control" placeholder="Password" id="Password" name="password">
+            <i class="fa fa-lock"></i>
+            </div>
+        <a class="link" href="#">Lost your password?</a>
+        <button type="submit" class="log-btn" >Log in</button>
+
+        </form>
+
+
+        <div class = "regist-btn">
+            <a href="/registor"> <button id="regis" type="regis" class="btn btn-primary btn-block center-block">Register</button></a>
         </div>
+
     </div>
-
-    <form class="form-horizontal" action = "/log" method = POST>
-        @if(form.hasGlobalErrors) {
-            <p class="error">
-            @form.globalError.message
-            </p>
-        }
-        <div class="form-group">
-            <label for="username" class="col-sm-2 control-label">username</label>
-            <div class="col-sm-10">
-                <input type="Username" class="form-control" id="Username" name="username"  placeholder="Enter Username">
-            </div>
-        </div>
-        <div class="form-group">
-            <label for="password" class="col-sm-2 control-label">Password</label>
-            <div class="col-sm-10">
-                <input type="Password" class="form-control" id="Password" name="password" placeholder="Password">
-            </div>
-        </div>
-        <div class="form-group">
-            <div class="col-sm-offset-2 col-sm-10">
-                <div class="checkbox">
-                    <label>
-                        <input type="checkbox"> Remember me
-                    </label>
-                </div>
-            </div>
-        </div>
-        <div class="form-group">
-            <div class="col-sm-offset-2 col-sm-10">
-                <button type="submit" class="btn btn-default">Sign in</button>
-            </div>
-        </div>
-    </form>
-
-    <div class = "regisbut">
-        <a href="/registor"> <button id="regis" type="regis" class="btn btn-primary btn-block center-block">Register</button></a>
-    </div>
-
 
 }
