--- a/public/stylesheets/login.css
+++ b/public/stylesheets/login.css
@@ -93,7 +93,7 @@ h1{
     dispaly:inline-block;
     width:100%;
     font-size:16px;
-    height:50px;
+    height:35px;
     color:#fff;
     text-decoration:none;
     border:none;
@@ -120,5 +120,10 @@ h1{
     font-size:12px;
     color:#f00;
     float:left;
+}
+
+.error{
+    color:#f00;
+    text-align:center;
 }
 
