edit login bg image not loading from website

--- a/public/stylesheets/login.css
+++ b/public/stylesheets/login.css
@@ -4,7 +4,9 @@
     -webkit-box-sizing:border-box;
     font-family:arial;
 }
-body{background:url("http://www.galaxiastudio.com/wp-content/uploads/2014/03/2252.jpg")#FF9000}
+body{
+    background:url("/assets/images/loginbg.png");
+}
 h1{
     color:#AAA173;
     text-align:center;
