--- a/app/views/projectPage.scala.html
+++ b/app/views/projectPage.scala.html
@@ -51,6 +51,9 @@
         </div>
     </header>
 
+    <div id="browse_app" class="text-center">
+        <a class="btn btn-large btn-info" href="/vote">Vote</a>
+    </div>
 
 
 
