--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -40,6 +40,9 @@
                     </li>
                     <li class = "page-scroll">
                     </li>
+                    <li class="page-scroll">
+                        <a href= "/logout">Log Out</a>
+                    </li>
                 </ul>
             </div>
                 <!-- /.navbar-collapse -->
