--- a/app/views/projectPage.scala.html
+++ b/app/views/projectPage.scala.html
@@ -14,7 +14,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#page-top">@message</a>
+                <a class="navbar-brand" href="#page-top">@project.name</a>
             </div>
 
                 <!-- Collect the nav links, forms, and other content for toggling -->
@@ -40,6 +40,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
+                    <div class="text-center">@message</div>
                     <img class="img-responsive" src="@routes.Assets.at("images/submarine.png")" style="width:50%;">
                     <div class="intro-text">
                         <span class="name">Team @project.name</span>
@@ -52,7 +53,7 @@
     </header>
 
     <div id="browse_app" class="text-center">
-        <a class="btn btn-large btn-info" href="/vote">Vote</a>
+        <a class="btn btn-large btn-info" href="@routes.Application.gotoVotePage( project.id , project.name )">Vote</a>
     </div>
 
 
