--- a/app/views/projectPage.scala.html
+++ b/app/views/projectPage.scala.html
@@ -2,7 +2,7 @@
 
 @(project: Project, message: String)
 
-@mainProj("Team @project.name") {
+@mainProj("Team " + project.name) {
     //header bar
     <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container">
