--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -20,7 +20,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#page-top">@message</a>
+                <a class="navbar-brand" href = "/index">@message</a>
             </div>
 
                 <!-- Collect the nav links, forms, and other content for toggling -->
@@ -51,7 +51,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <img src="@routes.Assets.at("images/map.png")" alt="map" style="width:30%;height:20%">
+                    <img src="@routes.Assets.at("images/map.png")" alt="map" style="width:50%;">
                 </div>
             </div>
         </div>
