--- a/app/views/projectPage.scala.html
+++ b/app/views/projectPage.scala.html
@@ -14,7 +14,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#page-top">@project.name</a>
+                <a class="navbar-brand" href="/index">@project.name</a>
             </div>
 
                 <!-- Collect the nav links, forms, and other content for toggling -->
