--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -9,7 +9,6 @@
         <span>Forms</span>
     </div>-->
 
-    //header bar
     <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container">
                 <!-- Brand and toggle get grouped for better mobile display -->
@@ -50,19 +49,20 @@
     <header>
         <div class="container">
             <div class="row">
-                <div class="col-lg-12">
-                    <img src="@routes.Assets.at("images/map.png")" alt="map" style="width:50%;">
+                <div class="col-lg-12" style="text-decoration-color: slategrey">
+                    <h1>EXCEED VOTE</h1>
+                    <h3>(เดี๋ยวค่อยมาแต่งต่อ)</h3>
                 </div>
             </div>
         </div>
     </header>
 
-    <!-- Portfolio Grid Section -->
+    <!--Project selection -->
     <section id="portfolio">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>Portfolio</h2>
+                    <h1>Projects</h1>
                     <hr class="star-primary">
                 </div>
             </div>
@@ -129,8 +129,6 @@
                 </div>
             </div>
         </div>
-    </section>
-
 
     <br>
     <br>
@@ -142,4 +140,16 @@
         }
         </div>
     }
+    </section>
+
+    <header>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <h1>Map</h1>
+                    <img src="@routes.Assets.at("images/map.png")" alt="map" style="width:50%;">
+                </div>
+            </div>
+        </div>
+    </header>
 }
