--- a/app/views/addproject.scala.html
+++ b/app/views/addproject.scala.html
@@ -1,6 +1,6 @@
 @(message: String)
 
-@main("Add project") {
+@mainAddProj("Add project") {
 
     <!--@play20.welcome(message, style = "Java")-->
 
@@ -8,32 +8,72 @@
         <span>Forms</span>
     </div>-->
 
-    <div id="header">
-        <h1>@message</h1>
+    //header bar
+    <nav class="navbar navbar-default navbar-fixed-top">
+        <div class="container">
+                <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header page-scroll">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="/index">@message</a>
+            </div>
 
-        <a href = "/logout"><button type="button" class="btn btn-danger">Logout</button></a>
-    </div>
+                <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav navbar-right">
+                    <li class="hidden active">
+                        <a href="#page-top"></a>
+                    </li>
+                    <li class="page-scroll">
+                        <a href= "/index">Index</a>
+                    </li>
+                    <li class="page-scroll">
+                        <a href= "/logout">Log Out</a>
+                    </li>
+                </ul>
+            </div>
+                <!-- /.navbar-collapse -->
+        </div>
+            <!-- /.container-fluid -->
+    </nav>
 
-    <form id="project" class="text-center" role="form" action = "/addproject" method = post>
-        name: <input type="text" name="name"><br>
-        image url: <input type="text" name="imageurl"><br>
-        description: <input type="text" name="description"><br>
-        manager: <input type="text" name="manager"><br>
 
-        <button id="submit" type="submit" class="btn btn-primary btn-block center-block">Submit</button>
-    </form>
-    <div id="browse_app" class="text-center">
-        <a class="btn btn-large btn-info" href="/result">Browse to result page (Test)</a>
-    </div>
-    <br>
-    <br>
-    <div id="browse_app" class="text-center">
-        <a class="btn btn-large btn-info" href="/">Browse to index page (Test)</a>
-    </div>
+    <header>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12" style="text-decoration-color: slategrey">
+                    <form id="project" class="text-center" role="form" action = "/addproject" method = post>
+                        name: <input type="text" name="name"><br>
+                        image url: <input type="text" name="imageurl"><br>
+                        description: <input type="text" name="description"><br>
+                        manager: <input type="text" name="manager"><br>
+
+                        <button id="submit" type="submit" class="btn btn-primary btn-block center-block">Submit</button>
+                    </form>
+                    <div id="browse_app" class="text-center">
+                        <a class="btn btn-large btn-info" href="/result">Browse to result page (Test)</a>
+                    </div>
+                    <br>
+                    <br>
+                    <div id="browse_app" class="text-center">
+                        <a class="btn btn-large btn-info" href="/">Browse to index page (Test)</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
+
+    
 
 
-    <!-- pop up -->
 
-    <!-- <script src="js/confirmPopUp.js"></script> <!-- Resource jQuery -->
+
+
+
+
 
 }
