--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -52,6 +52,7 @@
                 <div class="col-lg-12" style="text-decoration-color: slategrey">
                     <h1>EXCEED VOTE</h1>
                     <h3>(เดี๋ยวค่อยมาแต่งต่อ)</h3>
+
                 </div>
             </div>
         </div>
@@ -152,4 +153,22 @@
             </div>
         </div>
     </header>
+
+    <svg viewBox="0 0 600 300">
+            <!-- Gradient -->
+        <linearGradient class="text-gradient" id="gr-simple" x1="0" y1="0" x2="100%" y2="100%">
+            <stop stop-color="hsl(50, 100%, 70%)" offset="10%"/>
+            <stop stop-color="hsl(320, 100%, 50%)" offset="90%"/>
+        </linearGradient>
+
+            <!-- Text -->
+        <text text-anchor="middle"
+        x="50%"
+        y="50%"
+        dy=".35em"
+        class="text"
+        >
+            Exceed vote
+        </text>
+    </svg>
 }
