--- a/app/views/mainAddProj.scala.html
+++ b/app/views/mainAddProj.scala.html
@@ -12,6 +12,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.5/angular.min.js"></script>
         <script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.4/js/bootstrap.min.js"></script>
         <script src="@routes.Assets.at("javascripts/project.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.at("javascripts/addProj.js")" type="text/javascript"></script>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
