--- a/public/stylesheets/addProj.css
+++ b/public/stylesheets/addProj.css
@@ -65,7 +65,7 @@
 header {
     text-align: center;
     color: #fff;
-    background: #908040;
+    background: #ed967a;
 }
 
 header .container {
@@ -104,4 +104,132 @@ header .intro-text .skills {
     header .intro-text .skills {
         font-size: 1.75em;
     }
+}
+
+/* add image */
+/*#imagePreview {*/
+    /*width: 180px;*/
+    /*height: 180px;*/
+    /*background-position: center center;*/
+    /*background-size: cover;*/
+    /*-webkit-box-shadow: 0 0 1px 1px rgba(0, 0, 0, .3);*/
+    /*display: inline-block;*/
+/*}*/
+
+#dropzone {
+    position: relative;
+    border: 10px dotted #FFF;
+    border-radius: 20px;
+    color: white;
+    font: bold 24px/200px arial;
+    height: 200px;
+    margin: 30px auto;
+    text-align: center;
+    width: 200px;
+}
+
+#dropzone.hover {
+    border: 10px solid #FE5;
+    color: #FE5;
+}
+
+#dropzone.dropped {
+    background: #222;
+    border: 10px solid #444;
+}
+
+#dropzone div {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+}
+
+#dropzone img {
+    border-radius: 10px;
+    vertical-align: middle;
+    max-width: 95%;
+    max-height: 95%;
+}
+
+#dropzone [type="file"] {
+    cursor: pointer;
+    position: absolute;
+    opacity: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+}
+
+/* add text */
+
+.wrap {
+    font-family: 'Montserrat' sans-serif;
+    width: 450px;
+    margin: 0 auto;
+}
+
+.mat-label {
+    display: block;
+    font-size: 16px;
+    transform: translateY(25px);
+    color: #e2e2e2;
+    transition: all 0.5s;
+}
+
+.mat-input {
+    position: relative;
+    background: transparent;
+    width: 100%;
+    border: none;
+    outline: none;
+    padding: 8px 0;
+    font-size: 16px;
+}
+
+.mat-div {
+    padding: 30px 0 0 0;
+    position: relative;
+}
+
+.mat-div:after, .mat-div:before {
+    content: "";
+    position: absolute;
+    display: block;
+    width: 100%;
+    height: 2px;
+    background-color: #e2e2e2;
+    bottom: 0;
+    left: 0;
+    transition: all 0.5s;
+}
+
+.mat-div::after {
+    background-color: #8E8DBE;
+    transform: scaleX(0);
+}
+
+.is-active::after {
+    transform: scaleX(1);
+}
+
+.is-active .mat-label {
+    color: #8E8DBE;
+}
+
+.is-completed .mat-label {
+    font-size: 12px;
+    transform: translateY(0);
+}
+
+.wrap button {
+    background-color: #93E1D8;
+    border: none;
+    display: block;
+    margin: 35px auto;
+    padding: 15px 30px;
+    border-radius: 10px;
+    cursor: pointer;
 }
