--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -149,7 +149,7 @@
 header {
     text-align: center;
     color: #fff;
-    background: #F9E559;
+    background: #fada6c;;
 }
 
 header .container {
@@ -249,3 +249,38 @@ header .intro-text .skills {
     }
 }
 
+/* text : exceed vote */
+
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:800);
+
+.text {
+    font: 7.5em/1 Open Sans, Impact;
+    text-transform: uppercase;
+    fill: url(#gr-simple);
+}
+
+/* Other stuff */
+/*body {*/
+    /*background: #FFF;*/
+    /*margin: 0;*/
+/*}*/
+
+.text-gradient {
+    animation: 5s movingGradient ease;
+@include transform(scale(.4));
+}
+
+svg {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+}
+
+@keyframes movingGradient{
+    0% {
+    @include transform(translate3d(-100%, 0, 0));
+    }
+    100% {
+    @include transform(none);
+    }
+}
