can select project by clicking image

--- a/app/views/Register.scala.html
+++ b/app/views/Register.scala.html
@@ -17,6 +17,9 @@
         </div>
         @*gity *@
         <button id="submit" type="submit" class="btn btn-primary btn-block center-block">Submit</button>
+        <div id="browse_app" class="text-center">
+            <a class="btn btn-large btn-info" href="/index">Browse to index page (Test)</a>
+        </div>
     </form>
 
 }
