--- a/public/stylesheets/addProj.css
+++ b/public/stylesheets/addProj.css
@@ -65,7 +65,7 @@
 header {
     text-align: center;
     color: #fff;
-    background: #ed967a;
+    background: #a28f79;
 }
 
 header .container {
@@ -107,25 +107,20 @@ header .intro-text .skills {
 }
 
 /* add image */
-/*#imagePreview {*/
-    /*width: 180px;*/
-    /*height: 180px;*/
-    /*background-position: center center;*/
-    /*background-size: cover;*/
-    /*-webkit-box-shadow: 0 0 1px 1px rgba(0, 0, 0, .3);*/
-    /*display: inline-block;*/
-/*}*/
 
 #dropzone {
     position: relative;
     border: 10px dotted #FFF;
     border-radius: 20px;
     color: white;
-    font: bold 24px/200px arial;
-    height: 200px;
     margin: 30px auto;
     text-align: center;
+
+
+    /*font: bold 24px/150px arial;*/
+    height: 200px;
     width: 200px;
+
 }
 
 #dropzone.hover {
@@ -167,7 +162,7 @@ header .intro-text .skills {
 
 .wrap {
     font-family: 'Montserrat' sans-serif;
-    width: 450px;
+    width: 100%;
     margin: 0 auto;
 }
 
@@ -207,21 +202,23 @@ header .intro-text .skills {
 }
 
 .mat-div::after {
-    background-color: #8E8DBE;
+    background-color: #FFFFFF;
     transform: scaleX(0);
 }
 
 .is-active::after {
+    background-color: #f5ff91;
     transform: scaleX(1);
 }
 
 .is-active .mat-label {
-    color: #8E8DBE;
+    color: #f5ff91;
 }
 
 .is-completed .mat-label {
-    font-size: 12px;
+    font-size: 20px;
     transform: translateY(0);
+    text-align: center;
 }
 
 .wrap button {
