change UI register page

--- a/app/views/addproject.scala.html
+++ b/app/views/addproject.scala.html
@@ -77,7 +77,7 @@
                                 </div>
 
                                 <div class="mat-div">
-                                    <label for="maneger" class="mat-label">Project Maneger</label>
+                                    <label for="maneger" class="mat-label">Project Manager</label>
                                     <input type="text" class="mat-input" name="manager">
                                 </div>
                                 <button id="submit" type="submit" class="btn btn-primary btn-block center-block">Submit</button>
