--- a/app/views/Register.scala.html
+++ b/app/views/Register.scala.html
@@ -1,25 +1,62 @@
 @main("Register") {
 
-    <div class = "Head">
-        <div class="row">
-            <div class="col-md-12"><h1>Register</h1></div>
+    <nav class="navbar navbar-default navbar-fixed-top">
+        <div class="container">
+                <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header page-scroll">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="/index">Register</a>
+            </div>
 
+                <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav navbar-right">
+                    <li class="hidden active">
+                        <a href = "#page-top"></a>
+                    </li>
+                    <li class="page-scroll">
+                        <a href = "/index">Index</a>
+                    </li>
+                    <li class = "page-scroll">
+                        <a href = "/result">Voting Result</a>
+                    </li>
+                    <li class="page-scroll">
+                        <a href = "/logout">Log Out</a>
+                    </li>
+                </ul>
+            </div>
+                <!-- /.navbar-collapse -->
         </div>
-    </div>
-    <form action = "/regis" method = post>
-        <div class="form-group">
-            <label for="Username">Username</label>
-            <input  class="form-control" id="Username" name="username" placeholder="Enter Username" >
+            <!-- /.container-fluid -->
+    </nav>
+
+
+    <header>
+
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12" style="text-decoration-color: slategrey">
+                    <form action = "/login" method = post>
+                        <div class="form-group">
+                            <label for="Username">Username</label>
+                            <input  class="form-control" id="Username" name="username" placeholder="Enter Username" >
+                        </div>
+                        <div class="form-group">
+                            <label for="Password1">Password</label>
+                            <input type="Password" class="form-control" id="Password" name="password" placeholder="Password">
+                        </div>
+                        @*gity *@
+                        <button id="submit" type="submit" class="btn btn-primary btn-block center-block">Submit</button>
+                    </form>
+                </div>
+            </div>
         </div>
-        <div class="form-group">
-            <label for="Password1">Password</label>
-            <input type="Password" class="form-control" id="Password" name="password" placeholder="Password">
-        </div>
-        @*gity *@
-        <button id="submit" type="submit" class="btn btn-primary btn-block center-block">Submit</button>
-        <div id="browse_app" class="text-center">
-            <a class="btn btn-large btn-info" href="/index">Browse to index page (Test)</a>
-        </div>
-    </form>
+
+    </header>
 
 }
