Create new account model

--- a/app/views/Register.scala.html
+++ b/app/views/Register.scala.html
@@ -15,6 +15,12 @@
             <label for="Password1">Password</label>
             <input type="Password" class="form-control" id="Password" name="password" placeholder="Password">
         </div>
+        <div class="form-group">
+            <select class="form-control" id="Type" name="Type">
+                <option  id="Type" name="Type">Admin</option>
+                <option  id="Type" name="Type">Voter</option>
+            </select>
+        </div>
         @*gity *@
         <button id="submit" type="submit" class="btn btn-primary btn-block center-block">Submit</button>
         <div id="browse_app" class="text-center">
