--- a/app/views/Register.scala.html
+++ b/app/views/Register.scala.html
@@ -16,9 +16,9 @@
             <input type="Password" class="form-control" id="Password" name="password" placeholder="Password">
         </div>
         <div class="form-group">
-            <select class="form-control" id="Type" name="Type">
-                <option  id="Type" name="Type">Admin</option>
-                <option  id="Type" name="Type">Voter</option>
+            <select class="form-control" id="type" name="type">
+                <option  id="type" name="type">Admin</option>
+                <option  id="type" name="type">Voter</option>
             </select>
         </div>
         @*gity *@
