use pop up vote instead of go to vote page

--- a/app/views/vote.scala.html
+++ b/app/views/vote.scala.html
@@ -24,7 +24,7 @@
             <a href = "/logout"><button type="button" class="btn btn-danger">Logout</button></a>
         </div>
 
-        <form id="score" class="text-center" role="form" action = "/voting" method = post onsubmit="return confirm('Do you want to submit the form?');">
+        <form id="score" role="form" action = "/voting" method = post onsubmit="return confirm('Do you want to submit the form?');">
             Vote for Team @project.name
             <div class="creativity">
                 <label for="sel1">Creativity</label>
