--- a/public/stylesheets/project.css
+++ b/public/stylesheets/project.css
@@ -106,13 +106,14 @@ header .intro-text .skills {
     }
 }
 
+/*popUp*/
 .pop{
     font-family:sans-serif;
     width:100%;
     height:100%;
     margin:0;
     padding: 0;
-    padding-top: 10em;
+    padding-top: 3em;
     position: relative;
     text-align:center;
 }
@@ -243,26 +244,13 @@ a#openPopUp:hover{
     }
 }
 
-
-
-
-
-
-
-/*body{*/
-    /*background-color: #555;*/
-/*}*/
-.commentBox {
-    height: 40%;
-    width: 30%;
-}
+/*voting*/
 #header {
     background-color: lightcoral;
     text-align:center;
 }
 #score{
     width: 100%;
-    padding: 60pt;
 }
 #submit{
     width: 50%;
