commit for pull

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -113,5 +113,9 @@
                     </div>
                 </div>
             </header>
+
+            <div id="browse_app" class="text-center">
+                <a class="btn btn-large btn-info" href="/criteria">Voting for criteria</a>
+            </div>
         </body>
     </html>
