--- a/public/stylesheets/login.css
+++ b/public/stylesheets/login.css
@@ -14,8 +14,8 @@ h1{
 }
 
 .login-form{
-    width:350px;
-    padding:40px 30px;
+    width: 75%;
+    padding:4% 5%;
     background:rgba(235,235,205,0.7);
     border-radius:4px;
     -moz-border-radius:4px;
@@ -28,7 +28,7 @@ h1{
 }
 .form-control{
     width:100%;
-    height:50px;
+    height:50%;
     border:none;
     padding:5px 7px 5px 15px;
     background:#fff;
