get some button out from index page and login. add regis to admin page

--- a/app/views/login.scala.html
+++ b/app/views/login.scala.html
@@ -41,9 +41,9 @@
             </form>
 
 
-            <div class = "regist-btn">
-                <a href="/registor"> <button id="regis" type="regis" class="btn btn-primary btn-block center-block">Register</button></a>
-            </div>
+            @*<div class = "regist-btn">*@
+                @*<a href="/registor"> <button id="regis" type="regis" class="btn btn-primary btn-block center-block">Register</button></a>*@
+            @*</div>*@
 
         </div>
     </body>
