--- a/app/views/Register.scala.html
+++ b/app/views/Register.scala.html
@@ -87,6 +87,9 @@
                             </div>
                             <button id="submit" type="submit" class="btn btn-primary btn-block center-block">Submit</button>
                         </form>
+
+                            <a href="/AccList"> <button type="button" class="btn btn-success">AccountList</button>
+
                     </div>
                 </div>
 
