comminted for merge complete.scala.html

--- a/app/views/projectPage.scala.html
+++ b/app/views/projectPage.scala.html
@@ -30,10 +30,10 @@
             <!-- Custom Theme JavaScript -->
         <script src="@routes.Assets.at("javascripts/freelancer.js")" type="text/javascript"></script>
 
-        <script src="@routes.Assets.at("javascripts/addProj.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.at("../../public/javascripts/addText.js")" type="text/javascript"></script>
 
         @* ต้องเอามารวม *@
-        <script src="@routes.Assets.at("javascripts/addProj.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.at("../../public/javascripts/addText.js")" type="text/javascript"></script>
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/addProj.css")">
 
     </head>
