--- a/app/views/EditDescription.scala.html
+++ b/app/views/EditDescription.scala.html
@@ -26,7 +26,7 @@
             <!-- Custom Theme JavaScript -->
         <script src="@routes.Assets.at("javascripts/freelancer.js")" type="text/javascript"></script>
 
-        <script src="@routes.Assets.at("javascripts/addProj.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.at("../../public/javascripts/addText.js")" type="text/javascript"></script>
     </head>
     <body>
         <nav class="navbar navbar-default navbar-fixed-top">
