--- a/app/views/addproject.scala.html
+++ b/app/views/addproject.scala.html
@@ -27,8 +27,8 @@
 
             <!-- Custom Theme JavaScript -->
         <script src="@routes.Assets.at("javascripts/freelancer.js")" type="text/javascript"></script>
-
-        <script src="@routes.Assets.at("javascripts/addProj.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.at("../../public/javascripts/addImage.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.at("../../public/javascripts/addText.js")" type="text/javascript"></script>
 
     </head>
     <body>
