--- a/public/stylesheets/project.css
+++ b/public/stylesheets/project.css
@@ -401,7 +401,6 @@ a#openPopUpEdit:hover{
 }
 .popupEdit article{
     height: 300px;
-    /*background-color: #e67e22;*/
 }
 /* The cancel button on popup dialog */
 .popupEdit a.closePopUpEdit{
@@ -458,3 +457,9 @@ a#openPopUpEdit:hover{
         transition: top 0.35s ease;
     }
 }
+
+.wrap{
+    padding-top: 2em;
+}
+
+
