fixed image doesn't show in addProj page

--- a/public/stylesheets/addProj.css
+++ b/public/stylesheets/addProj.css
@@ -65,7 +65,7 @@
 header {
     text-align: center;
     color: #fff;
-    background: #d85946;
+    background: #fc6d58;
 }
 
 header .container {
@@ -106,57 +106,7 @@ header .intro-text .skills {
     }
 }
 
-/* add image */
 
-#dropzone {
-    position: relative;
-    border: 10px dotted #FFF;
-    border-radius: 20px;
-    color: white;
-    margin: 30px auto;
-    text-align: center;
-
-
-    /*font: bold 24px/150px arial;*/
-    height: 200px;
-    width: 200px;
-
-}
-
-#dropzone.hover {
-    border: 10px solid #FE5;
-    color: #FE5;
-}
-
-#dropzone.dropped {
-    background: #222;
-    border: 10px solid #444;
-}
-
-#dropzone div {
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-}
-
-#dropzone img {
-    border-radius: 10px;
-    vertical-align: middle;
-    max-width: 95%;
-    max-height: 95%;
-}
-
-#dropzone [type="file"] {
-    cursor: pointer;
-    position: absolute;
-    opacity: 0;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-}
 
 /* add text */
 
