--- a/app/views/addproject.scala.html
+++ b/app/views/addproject.scala.html
@@ -15,6 +15,7 @@
             <!-- Custom CSS -->
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/freelancer.css")">
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/addProj.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/addImage.css")">
             <!-- jQuery -->
         <script src="@routes.Assets.at("javascripts/jquery.js")" type="text/javascript"></script>
             <!-- Bootstrap Core JavaScript -->
@@ -27,8 +28,12 @@
 
             <!-- Custom Theme JavaScript -->
         <script src="@routes.Assets.at("javascripts/freelancer.js")" type="text/javascript"></script>
-        <script src="@routes.Assets.at("../../public/javascripts/addImage.js")" type="text/javascript"></script>
-        <script src="@routes.Assets.at("../../public/javascripts/addText.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.at("javascripts/addProj.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.at("javascripts/addImage.js")" type="text/javascript"></script>
+
+
+
+
 
     </head>
     <body>
